--- a/src/css/form.css
+++ b/src/css/form.css
@@ -38,7 +38,6 @@
   width: 100%;
   padding: 12px;
   border: none;
-  background: var(--color-bluish-purple);
   color: #fff;
   font-size: 16px;
   cursor: pointer;
@@ -46,6 +45,6 @@
 }
 
 .contact-form button:hover {
-  background: white;
-  color: var(--color-bluish-purple);
+  background: #EEEEEE;
+  color: black;
 }
