--- a/src/css/form.css
+++ b/src/css/form.css
@@ -39,12 +39,14 @@
   padding: 12px;
   border: none;
   color: #fff;
+  background: black;
   font-size: 16px;
   cursor: pointer;
   transition: background 0.3s ease;
 }
 
 .contact-form button:hover {
-  background: #EEEEEE;
+  background: white;
+  border: 1px solid black;
   color: black;
 }
