--- a/src/css/about.css
+++ b/src/css/about.css
@@ -8,7 +8,7 @@
   border-bottom: 1px solid black;
   border-top: 1px solid var(--color-bluish-purple);
   background: #000000;
-  transition: 0.3s;
+  transition: 0.3s all ease-in-out;
 } 
 #about img{
   border-radius: 50%;
