--- a/src/css/buttontop.css
+++ b/src/css/buttontop.css
@@ -1,12 +1,13 @@
 .btn_top{
     width: 50px;
-    height: 45px;
-    background: black;
-    color: white;
+    height: 50px;
+    background: #0063Fc;
+    color: black;
     position: fixed;
     bottom: 20px;
     right: 20px;
     border: none;
     display: none;
     font-size: 20px;
+    font-weight: bold;
 }
