--- a/src/css/buttontop.css
+++ b/src/css/buttontop.css
@@ -10,4 +10,10 @@
     display: none;
     font-size: 20px;
     font-weight: bold;
+    border-radius: 10px;
+    cursor: pointer;
+    z-index: 99;
+    box-shadow: -4px -4px 8px rgba(0, 0, 0, 0.637);
+    transition: background-color 0.3s, transform 0.3s;
+
 }
