--- a/src/css/main.css
+++ b/src/css/main.css
@@ -42,7 +42,7 @@ html {
   font-size: 12px;
   margin-bottom: 60px;
 }
-.Initial img{
+.initial img{
   width: 250px;
   margin-top: 90px;
   border: 3px solid black;
