--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -10,6 +10,7 @@ nav{
   background: #1A1A1F;
   box-shadow: 0 0 10px #000000;
   margin-left: 600px;
+  transition: .3s ease;
 }
 .platform{
   margin-top: 3px;
