--- a/src/css/variable.css
+++ b/src/css/variable.css
@@ -1,8 +1,10 @@
 :root {
   /* color variable */
-  --color-ghost-white: #f5faff;
-  --color-bluish-purple: black;
-  --color-charcoal-black: #fff;
+  --dark-blue: #0F172A;
+  --light-Ramadan: #E2E8F0;
+  --Modern-heavenly: #38BDF8;
+  --light-purple: #A855F7;
+  --modern-yellow: #FACC15;
 }
 
 
