--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap');
 
 body{
-  background-color: #FFFFFF;
+  background-color: var(--dark-blue);
 }
 html {
   scroll-behavior: smooth;
@@ -31,21 +31,20 @@ html {
 }
 .title h1{
   font-size: 30px;
-  color: black;
+  color: var(--light-Ramadan);
   margin: 8px 0;
 }
 .title span{
-  color: #0063FF;
+  color: var(--Modern-heavenly);
 }
 .title p{
-  color: #606060;
+  color: var(--light-Ramadan);
   font-size: 12px;
   margin-bottom: 60px;
 }
 .initial img{
   width: 250px;
   margin-top: 90px;
-  border: 3px solid black;
   border-radius: 50%;
 }
 .btn{
@@ -53,8 +52,8 @@ html {
   background: transparent;
   margin: 20px 0;
   text-decoration: none;
-  color: black;
-  border: 1.5px solid #000000;
+  color: white;
+  border: 1.5px solid var(--modern-yellow);
 }
 
 
@@ -81,7 +80,7 @@ html {
 nav{
   position: fixed;
   left: 0;top: 0;bottom: 0;right: 0;
-  background: #1A1A1F;
+  background: var(--dark-blue);
   box-shadow: 0 0 10px #000000;
   margin-left: 600px;
   transition: .3s ease;
@@ -106,11 +105,11 @@ nav ul{
   margin-top: 30%;
 }
 nav ul a{
-  color: white;
+  color: var(--Modern-heavenly);
   text-decoration: none;
 }
 nav ul a:hover{
-  color: #0063FF;
+  color: var(--modern-yellow);
 }
 .menu{
   z-index: 7;
@@ -127,13 +126,12 @@ nav ul a:hover{
 ==============================
 */ 
 .skill{
-  background: #FFFFFF;
+  background: var(--light-purple);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 40px 70px;
-  border: 1px solid black;
 }
 .skill img{
   width: 70px;
@@ -247,16 +245,16 @@ nav ul a:hover{
   padding: 10px 20px;
   position: fixed;
   top: 0;right: 0;left: 0;
-  background: #FEFEFE;
+  background: var(--dark-blue);
 }
 .logo img{
-  width: 40px;
+  width: 50px;
 }
 .logo a{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: black;
+  color: var(--light-Ramadan);
   text-decoration: none;
   font-size: 19px;
   font-weight: 700;
@@ -427,23 +425,3 @@ footer div p{
 footer a{
   color: white;
 }
-
-
-/*
-==============================
-==== navbar and platform =====
-==============================
-*/
-
-/*
-==============================
-==== navbar and platform =====
-==============================
-*/ 
-
-
-/*
-==============================
-==== navbar and platform =====
-==============================
-*/ 
