--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,6 +1,7 @@
 @media (min-width: 564px)  {
   .container{
     padding: 10px 30px;
+    z-index: 444;
   }
   .title{ 
     width: 80%;
@@ -57,11 +58,9 @@
  .contact-form{
    padding: 40px 270px !important;
  }
- 
  .link{
-   display: flex;
-   justify-content: space-evenly;
-   align-items: center;
+   display: flex !important;
+   flex-direction: row;
  }
  nav{
    position: relative;
@@ -76,10 +75,14 @@
    left: 0;
  }
  nav ul li a{
-   color: black;
+   color: var(--Modern-heavenly);
+ }
+ .about-title h2{
+   top: 577px;
  }
  .menu{
    display: none;
  }
+ 
 }
 
